--- a/CatWeb-Bordon/scss/style.scss
+++ b/CatWeb-Bordon/scss/style.scss
@@ -1,6 +1,7 @@
-@import"../componentes/nav";
-@import"../componentes/header";
-@import"../componentes/section";
+@import"./base/variables";
+@import"./componentes/nav";
+@import"./componentes/header";
+@import"./componentes/section";
 
  /*body*/ 
 body {
