--- a/CatWeb-Bordon/scss/base/_extends.scss
+++ b/CatWeb-Bordon/scss/base/_extends.scss
@@ -1,1 +1,8 @@
--
+%display{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+%transition{
+    transition: all 0.7s;
+}
