--- a/CatWeb-Bordon/scss/style.css
+++ b/CatWeb-Bordon/scss/style.css
@@ -1,9 +1,16 @@
+.sas-aside {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.sas-section article:hover {
+  transition: all 0.7s;
+}
+
 /*nav */
 .sas-nav {
   grid-area: nav;
-}
-.sas-nav li a:hover {
-  color: #2897e7;
 }
 .sas-nav li:hover {
   transform: scale(1.2);
@@ -47,11 +54,9 @@
   margin: 30px 40px;
   padding: 10px;
   background-color: #2897e7;
-  background-color: #2897e7;
 }
 .sas-section article:hover {
   transform: scale(1.1);
-  transition: all 0.7s;
 }
 .sas-section p {
   font-family: "Roboto", sans-serif;
@@ -74,11 +79,8 @@ body {
 /*aside */
 .sas-aside {
   grid-area: aside;
-  background-color: #092b9b;
+  background-color: #2f59a7;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23009bd7' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  align-items: center;
-  justify-content: center;
-  display: flex;
 }
 .sas-aside p {
   font-size: 22px;
