--- a/CatWeb-Bordon/css/style.css
+++ b/CatWeb-Bordon/css/style.css
@@ -319,7 +319,7 @@ section iframe {
     .aside{
         background-color: #53ed00;
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23039210' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-        font-size: 40px;
+        font-size: 20px;
 }
     .grid-container{
         grid-template-areas: "header header header"
@@ -333,8 +333,9 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
         font-size: 40px;
     }
     h1{
-        font-size: 100px;
+        font-size: 40px;
     }
+    
    .gif{
         width: 220px;
         height: 220px;
@@ -342,6 +343,12 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 /* 375×667 (móvil medio) */
 @media screen and (max-width: 375px){
+    .aside{
+        font-size: 40px;
+    }
+    h1{
+        font-size: 30px;
+    }
     .imgs{
         width: 80%;
         height: 80%;
@@ -363,13 +370,18 @@ background-image: url("data:image/svg+xml,%3Csvg width='100' height='100' viewBo
      .aside{
         background-color: #e4e108;
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%235e6100' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+        font-size: 20px;
      }
-     h1{
-         font-size: 40px;
-     }
+    
 }
 /* 360×640 (móvil pequeño) */
 @media screen and (max-width: 360px){
+    h1{
+        font-size: 30px;
+    }
+    .aside{
+        font-size: 20px;
+    }
     .imgs{
         width: 80%;
         height: 80%;
@@ -433,15 +445,6 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .navmod1{
     background-color: #2f59a7;
 }
-.btnmod2{
-    color: #fff;
-    background-color: #0360b1;
-    border-color: #0870cc;
-}
-.btnmod1{
-    color: #fff;
-    background-color: #b60202;
-    border-color: #660303;
-}
+
 
     
