--- a/CatWeb-Bordon/scss/componentes/_tienda.scss
+++ b/CatWeb-Bordon/scss/componentes/_tienda.scss
@@ -1,48 +1,62 @@
-.sas-section{
+.sas-section {
     table {
         display: flex;
         justify-content: center;
         text-align: end;
         background-image: url(../assets/img/ca.jpg);
         background-size: cover;
+
+        td {
+            width: 300px;
+            padding: 20px 20px 15px 15px;
+        }
     }
+
     th {
         background-color: rgb(43, 43, 226);
         border-bottom: 5px solid;
         color: #320064;
+        width: 160px;
+        height: 200;
     }
+
     .trdif {
         background-color: hwb(200 17% 19% / 0.799);
         color: white;
     }
+
     tr {
         background-color: aliceblue;
         border-bottom: 5px solid;
         color: rgb(14, 126, 179);
     }
-    article{
+.tienda-gatos{
+    margin-bottom: 80px;
+    margin-top: 50px;
+
+}
+    article {
         h2 {
             display: flex;
             justify-content: center;
         }
+
         h3 {
             display: flex;
             justify-content: center;
         }
+
         table {
             display: flex;
             justify-content: center;
             border: 50px 50px;
-        
+
         }
+
         img {
             display: block;
             margin-left: auto;
             margin-right: auto;
         }
-     }
-} 
-
-
-
-
+    }
+}
