--- a/CatWeb-Bordon/scss/stylee.css
+++ b/CatWeb-Bordon/scss/stylee.css
@@ -9,6 +9,57 @@
   transition: all 0.7s;
 }
 
+/*body*/
+body {
+  font-family: "Koulen", cursive;
+}
+
+/*container */
+.sas-container {
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: 80% auto;
+  grid-template-rows: repeat(4, auto);
+  grid-template-areas: "header header header" "nav nav nav" "contenido contenido aside" "footer footer footer";
+}
+.sas-container h2 {
+  padding-top: 20px;
+}
+
+/*aside */
+.sas-aside {
+  grid-area: aside;
+  background-color: #2f59a7;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23009bd7' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+.sas-aside p {
+  font-size: 22px;
+  color: white;
+  padding: 20px;
+}
+
+/*foot */
+#footsas {
+  grid-area: footer;
+  padding: 10px 10px;
+  background-color: #798088;
+  display: grid;
+  justify-content: center;
+}
+#footsas h3 {
+  font-size: 20px;
+}
+#footsas i {
+  color: black;
+  font-size: 50px;
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+}
+#footsas i:hover {
+  color: #0b68e3;
+}
+
 /*nav */
 .sas-nav {
   grid-area: nav;
@@ -49,6 +100,7 @@ article {
   background-color: #2f59a7;
   background-image: url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 18c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm48 25c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm-43-7c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm63 31c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM34 90c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm56-76c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM12 86c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm28-65c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm23-11c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-6 60c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm29 22c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zM32 63c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm57-13c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-9-21c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM60 91c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM35 41c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM12 60c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2z' fill='%235b91f4' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
   grid-area: contenido;
+  padding-bottom: 40px;
 }
 .sas-section h2 {
   font-size: 32px;
@@ -73,10 +125,16 @@ article {
   background-image: url(../assets/img/ca.jpg);
   background-size: cover;
 }
+.sas-section table td {
+  width: 300px;
+  padding: 20px 20px 15px 15px;
+}
 .sas-section th {
   background-color: rgb(43, 43, 226);
   border-bottom: 5px solid;
   color: #320064;
+  width: 160px;
+  height: 200;
 }
 .sas-section .trdif {
   background-color: hwb(200 17% 19%/0.799);
@@ -86,6 +144,10 @@ article {
   background-color: aliceblue;
   border-bottom: 5px solid;
   color: rgb(14, 126, 179);
+}
+.sas-section .tienda-gatos {
+  margin-bottom: 80px;
+  margin-top: 50px;
 }
 .sas-section article h2 {
   display: flex;
@@ -108,18 +170,36 @@ article {
 
 .btnmod2 {
   color: #fff;
-  background-color: #0360b1;
-  border-color: #0870cc;
+  background-color: #0033ff;
+  border-color: #1f0264;
 }
 
 .btnmod1 {
   color: #fff;
-  background-color: #b60202;
-  border-color: #660303;
+  background-color: #000d85;
+  border-color: #2f00ff;
 }
 
 .sas-section {
   overflow: hidden;
+}
+
+.form {
+  margin: 30px 30px 60px 20px;
+}
+
+.sas-section h2 {
+  padding-top: 25px;
+}
+
+.contact-trans ol img {
+  width: 500px;
+}
+
+.contmod {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .ubi {
@@ -152,56 +232,15 @@ article {
   overflow: hidden;
 }
 
-/*body*/
-body {
-  font-family: "Koulen", cursive;
-}
-
-/*container */
-.sas-container {
-  display: grid;
-  grid-gap: 5px;
-  grid-template-columns: 80% auto;
-  grid-template-rows: repeat(4, auto);
-  grid-template-areas: "header header header" "nav nav nav" "contenido contenido aside" "footer footer footer";
-}
-
-/*aside */
-.sas-aside {
-  grid-area: aside;
-  background-color: #2f59a7;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23009bd7' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-}
-.sas-aside p {
-  font-size: 22px;
-  color: white;
-  padding: 20px;
-}
-
-/*foot */
-#footsas {
-  grid-area: footer;
-  padding: 0px;
-  background-color: #798088;
-  display: grid;
-  justify-content: center;
-}
-#footsas h3 {
-  font-size: 20px;
-}
-#footsas i {
-  color: black;
-  font-size: 50px;
-  position: fixed;
-  bottom: 15px;
-  right: 15px;
-}
-#footsas i:hover {
-  color: #0b68e3;
-}
-
 /* 720×1280 (móvil grande) */
 @media screen and (max-width: 720px) {
+  .sas-section .razas {
+    width: 250px;
+    height: 250px;
+  }
+  .sas-section .audio {
+    width: 260px;
+  }
   .sas-header h1 {
     font-size: 50px;
   }
@@ -234,7 +273,8 @@ body {
     font-size: 20px;
   }
   .sas-container {
-    grid-template-areas: "header header header" "nav nav nav" "nav nav nav" "contenido contenido contenido" "aside aside aside" "footer footer footer";
+    grid-template-areas: "header" "nav" "nav" "contenido" "aside" "footer";
+    grid-template-columns: 1fr;
   }
   #footsas h3 {
     font-size: 18px;
@@ -246,6 +286,13 @@ body {
 }
 /* 375×667 (móvil medio) */
 @media screen and (max-width: 375px) {
+  .sas-section .razas {
+    width: 150px;
+    height: 150px;
+  }
+  .sas-section .audio {
+    width: 140px;
+  }
   .sas-header h1 {
     font-size: 30px;
   }
